text/fig revisions

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_0_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_0_content.tex
@@ -1,12 +1,13 @@
-\subsection*{Introduction}
+\subsection{Introduction}
 
-How did species come to live where they're found today?
-To answer this, we can leverage phylogenetic, molecular, and geographical information to model species distributions as the outcome of biogeographic processes.
+Species evolve and diversify in a spatial context.
+So, when characterizing the evolutionary history of a clade, it is important to consider when and how the clade came to live where its taxa are found today.
+We can learn this through a historical biogeographic analysis by leveraging phylogenetic, molecular, and geographical information to model species distributions as the outcome of biogeographic processes.
 How to best model these processes requires special consideration, such as how ranges are inherited following speciation events, how geological events might influence dispersal rates, and what factors affect rates of dispersal and extirpation.
 A major technical challenge of modeling range evolution is how to translate these natural processes into stochastic processes that remain tractable for inference.
 This tutorial provides a brief background in some of these models, then describes how to perform Bayesian inference of historical biogeography using \RevBayes.
 
-\subsection*{Contents}
+\subsection{Contents}
 
 The Historical Biogeography guide contains several tutorials
 
@@ -17,12 +18,12 @@ The Historical Biogeography guide contains several tutorials
 \item Section \ref{sec:bg_phylo}: Biogeographic dating using DEC
 \end{itemize}
 
-\subsection*{Recommended tutorials}
+\subsection{Recommended tutorials}
 
 The Historical Biogeography tutorials assume the reader is familiar with the content covered in the following \RevBayes tutorials
 
 \begin{itemize}
-\item {\bf \large \Rev Basics}
+\item {\bf {\tt \large Rev} Basics}
 \item {\bf Molecular Models of Character Evolution}
 \item {\bf Running and Diagnosing an MCMC Analysis}
 \item {\bf Divergence Time Estimation and Node Calibrations}
