--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -515,7 +515,7 @@
 }
 
 @Article{Baldwin1991,
-  Title                    = {Chloroplast DNA evidence for a North American origin of the Hawaiian silversword alliance (Asteraceae)},
+  Title                    = {{Chloroplast DNA evidence for a North American origin of the Hawaiian silversword alliance (Asteraceae)}},
   Author                   = {Baldwin, Bruce G and Kyhos, Donald W and Dvorak, Jan and Carr, Gerald D},
   Journal                  = {Proceedings of the National Academy of Sciences},
   Year                     = {1991},
@@ -527,7 +527,7 @@
 }
 
 @Article{Baldwin1998,
-  Title                    = {Age and rate of diversification of the Hawaiian silversword alliance (Compositae)},
+  Title                    = {{Age and rate of diversification of the Hawaiian silversword alliance (Compositae)}},
   Author                   = {Baldwin, Bruce G and Sanderson, Michael J},
   Journal                  = {Proceedings of the National Academy of Sciences},
   Year                     = {1998},
@@ -1221,7 +1221,7 @@ Quite nice!},
 }
 
 @Article{Buerki2011,
-  Title                    = {An evaluation of new parsimony-based versus parametric inference methods in biogeography: a case study using the globally distributed plant family Sapindaceae},
+  Title                    = {{An evaluation of new parsimony-based versus parametric inference methods in biogeography: a case study using the globally distributed plant family Sapindaceae}},
   Author                   = {Buerki, Sven and Forest, F{\'e}lix and Alvarez, Nadir and Nylander, Johan AA and Arrigo, Nils and Sanmart{\'\i}n, Isabel},
   Journal                  = {Journal of Biogeography},
   Year                     = {2011},
@@ -1297,7 +1297,7 @@ Quite nice!},
 }
 
 @Article{Carlquist1959,
-  Title                    = {Studies on Madinae: anatomy, cytology, and evolutionary relationships},
+  Title                    = {{Studies on Madinae: anatomy, cytology, and evolutionary relationships}},
   Author                   = {Carlquist, Sherwin},
   Journal                  = {Aliso},
   Year                     = {1959},
@@ -3897,7 +3897,7 @@ Gives also a introduction what else can be used and what is good and bad in ML, 
 @article{Ho2015,
   title={Biogeographic calibrations for the molecular clock},
   author={Ho, Simon YW and Tong, K Jun and Foster, Charles SP and Ritchie, Andrew M and Lo, Nathan and Crisp, Michael D},
-  journal={Biology letters},
+  journal={Biology Letters},
   volume={11},
   number={9},
   pages={20150194},
@@ -4876,11 +4876,10 @@ Another clock-constrained bayesian MCMC software},
 @Article{Landis2016,
   Title                    = {Biogeographic dating of speciation times using paleogeographically informed processes},
   Author                   = {Landis, Michael J},
-  Journal                  = {Systematic biology},
+  Journal                  = {Systematic Biology},
   Year                     = {2016},
-  Pages                    = {syw040},
-
-  Publisher                = {Oxford University Press}
+  Doi                      = {10.1093/sysbio/syw040},
+  Volume                   = {Advance Access}
 }
 
 @Article{Landis2013a,
@@ -5705,7 +5704,7 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
 }
 
 @Article{Matzke2012,
-  Title                    = {Founder-event speciation in BioGeoBEARS package dramatically improves likelihoods and alters parameter inference in dispersal--extinction--cladogenesis DEC analyses},
+  Title                    = {{Founder-event speciation in BioGeoBEARS package dramatically improves likelihoods and alters parameter inference in dispersal--extinction--cladogenesis DEC analyses}},
   Author                   = {Matzke, Nicholas J},
   Journal                  = {Frontiers of Biogeography},
   Year                     = {2012},
