--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial.tex
@@ -13,7 +13,7 @@
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large Historical biogeography}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Michael Landis}
+{\Large Michael J. Landis}
 \vspace{1cm}
 \end{center}
 
