--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -29,7 +29,7 @@ In addition to installing the software, this tutorial assumes that you have read
 \begin{itemize}[noitemsep,topsep=0pt]
 \item \href{https://github.com/revbayes/revbayes_tutorial/blob/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\mi{Basic Introduction to \Rev and MCMC}}
 \item \href{https://github.com/revbayes/revbayes_tutorial/blob/master/tutorial_TeX/RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_Tutorial.pdf}{\mi{Introduction to MCMC Simulation}}
-\item \href{https://github.com/revbayes/revbayes_tutorial/blob/master/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial.pdf}{\mi{Substitution Models for Time-Constrained Trees}}
+\item \href{https://github.com/revbayes/revbayes_tutorial/blob/master/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial.pdf}{\mi{Substitution Models}}
 \item \href{https://github.com/revbayes/revbayes_tutorial/blob/master/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial.pdf}{\mi{Partitioned Data Analysis}}
 \end{itemize}
 
