--- a/tutorial_TeX/RB_PosteriorPrediction_Tutorial/RB_PosteriorPrediction_Tutorial.tex
+++ b/tutorial_TeX/RB_PosteriorPrediction_Tutorial/RB_PosteriorPrediction_Tutorial.tex
@@ -10,10 +10,10 @@
 \thispagestyle{plain}
 \begin{center}
 
-\textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Model adequacy testing using Posterior Prediction}}\\\vspace{2mm}
+\textbf{\LARGE Assessing Phylogenetic Reliability Using \RevBayes}\\\vspace{2mm}
+\textbf{\it{\Large Model adequacy testing using posterior prediction}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Sebastian H{\"o}hna and Lyndon M. Coghill}
+{\Large Lyndon M. Coghill, Sebastian H{\"o}hna and Jeremy M. Brown}
 \vspace{1cm}
 \end{center}
 
