--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -3047,6 +3047,18 @@ Uses also the diagnosis of the golden runs.},
   Timestamp                = {2010.03.27}
 }
 
+
+@Article{Gillespie2009,
+  title={{Island Biogeography of Remote Archipelagoes}},
+  author={Gillespie, G. Rosemary and Baldwin, G. Bruce},
+  journal={The Theory of Island Biogeography Revisited},
+  year={2009},
+  Pages = {358--387},
+  publisher={Princeton University Press}
+}
+
+
+
 @Article{ginsburg1995,
   Title                    = {\textit{{Z}aragocyon daamsi n. gen. sp. nov.}, U{}rsidae primitif du {M}ioc{\`e}ne inf{\'e}rieur d'{E}spagne},
   Author                   = {Ginsburg, L and Morales, J},
@@ -5725,6 +5737,17 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Volume                   = {4}
 }
 
+@article{matzke2014model,
+  title={{Model Selection in Historical Biogeography Reveals that Founder-Event Speciation Is a Crucial Process in Island Clades}},
+  author={Matzke, Nicholas J},
+  journal={Systematic Biology},
+  volume={63},
+  number={6},
+  pages={951--970},
+  year={2014},
+  publisher={Oxford University Press}
+}
+
 @Article{Mau1997,
   Title                    = {Phylogenetic Inference for Binary Data on Dendograms Using Markov Chain Monte Carlo},
   Author                   = {Mau, Bob and Newton, Michael A.},
@@ -6207,6 +6230,17 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Owner                    = {hoehna},
   Publisher                = {Taylor \& Francis Group},
   Timestamp                = {2015.04.16}
+}
+
+@article{Neall2008,
+  title={{The age and origin of the Pacific islands: a geological overview}},
+  author={Neall, Vincent E and Trewick, Steven A},
+  journal={Philosophical Transactions of the Royal Society B: Biological Sciences},
+  volume={363},
+  number={1508},
+  pages={3293--3308},
+  year={2008},
+  publisher={The Royal Society}
 }
 
 @Article{Near2012,
