--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
@@ -24,7 +24,7 @@ Mainland & Z & - & - & - & - & - & - & - & - \\
 \end{tabular}
 \caption{Hawaiian paleogeographic data.
 The six areas are given in Figure \ref{fig:hawaii_areas}.
-Ages $a_{max}$ and $a_{min}$ report the maximum and minimum origination times for the given island.
+Ages $a_{max}$ and $a_{min}$ report the maximum and minimum origination times for the given island \citep[adapted from][]{Neall2008}.
 Distances $g_{ij}$ report the shortest geographical distance from the coast of the row's area to the column's area (measured at present).}
 \label{tab:paleogeo}
 \end{table}
@@ -407,7 +407,7 @@ The next tutorials discuss how to jointly estimate phylogeny and biogeography, w
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[width=0.75\textwidth]{figures/fig_epoch_RevGadgets_ase.pdf}
+\includegraphics[width=0.9\textwidth]{figures/fig_epoch_RevGadgets_ase.pdf}
 \caption{Tree with ancestral state estimates. Nodes are annotated with ancestral states before and after cladogenetic events. Most probable states are shown. Colors of markers indicate the range state. Sizes of markers indicate the posterior probability of that state. }
 \label{fig:epoch_RevGadgets_ase}
 \end{figure}
