--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_0_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_0_content.tex
@@ -1,8 +1,8 @@
 \subsection{Introduction}
 
-Species evolve and diversify in a spatial context.
-So, when characterizing the evolutionary history of a clade, it is important to consider when and how the clade came to live where its taxa are found today.
-We can learn this through a historical biogeographic analysis by leveraging phylogenetic, molecular, and geographical information to model species distributions as the outcome of biogeographic processes.
+Many fundamental evolutionary processes, such as adaptation, speciation, and extinction, operate in a spatial context. 
+Although we cannot often view this spatial context directly, ancestral ranges may be reconstructed through historical biogeographic analyses.
+This works by leveraging phylogenetic, molecular, and geographical information to model species distributions as the outcome of biogeographic processes.
 How to best model these processes requires special consideration, such as how ranges are inherited following speciation events, how geological events might influence dispersal rates, and what factors affect rates of dispersal and extirpation.
 A major technical challenge of modeling range evolution is how to translate these natural processes into stochastic processes that remain tractable for inference.
 This tutorial provides a brief background in some of these models, then describes how to perform Bayesian inference of historical biogeography using \RevBayes.
